--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -28,12 +28,14 @@ library
       D1
       D2
       D3
+      D4
   other-modules:
       Paths_AdventOfCode
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , split >=0.2.3.4
   default-language: Haskell2010
 
 executable AdventOfCode-exe
@@ -46,6 +48,7 @@ executable AdventOfCode-exe
   build-depends:
       AdventOfCode
     , base >=4.7 && <5
+    , split >=0.2.3.4
   default-language: Haskell2010
 
 test-suite AdventOfCode-test
@@ -59,4 +62,5 @@ test-suite AdventOfCode-test
   build-depends:
       AdventOfCode
     , base >=4.7 && <5
+    , split >=0.2.3.4
   default-language: Haskell2010
