--- a/AdventOfCode.cabal
+++ b/AdventOfCode.cabal
@@ -29,12 +29,14 @@ library
       D2
       D3
       D4
+      D5
   other-modules:
       Paths_AdventOfCode
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , containers >=0.6.5.1
     , split >=0.2.3.4
   default-language: Haskell2010
 
@@ -48,6 +50,7 @@ executable AdventOfCode-exe
   build-depends:
       AdventOfCode
     , base >=4.7 && <5
+    , containers >=0.6.5.1
     , split >=0.2.3.4
   default-language: Haskell2010
 
@@ -62,5 +65,6 @@ test-suite AdventOfCode-test
   build-depends:
       AdventOfCode
     , base >=4.7 && <5
+    , containers >=0.6.5.1
     , split >=0.2.3.4
   default-language: Haskell2010
